@@ -3,3 +3,7 @@ libjcode-perl (2.8-1) frozen unstable; urgency=low
   * Upstream version.
 
  -- Blah <joe@example.com>  Thu, 15 Oct 1998 09:21:48 +0900
+
+Local variables:
+mode: debian-changelog
+End:
