@@ -4,6 +4,8 @@ lintian-brush (0.63) UNRELEASED; urgency=medium
     debhelper 13. Closes: #959823
   * Add document start when adding new YAML files. Closes: #958413
   * Check Debian bugs when correcting Close => Closes.
+  * debian-changelog-file-contains-obsolete-user-emacs-settings: Only
+    remove add-log-mailing-address, not mode lines.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 05 May 2020 22:45:16 +0000
 
